package com.example.dishplanet.repositorios;

import com.example.dishplanet.entidades.IngredienteUsado;
import org.springframework.data.jpa.repository.JpaRepository;

public interface IngredienteUsadoRepository extends JpaRepository<IngredienteUsado,Long> {
}
